# strict-ghc-plugin

./: .gitignore  AUTHORS.txt  BUILDING  LICENSE  README.md  strict-ghc-plugin.cabal  strict-plugin.cabal
Strict/: Annotation.hs  Pass.lhs  Plugin.hs
tests/: Makefile  NonTerminating.hs
