name:                strict-ghc-plugin
version:             0.1.1
synopsis:            Compiler plugin for making Haskell strict
description:
  This plugin gives an example of defining a compiler plugin for
  GHC. You mark functions with the `Strictify` annotation and GHC
  makes the function strict (by recursively expanding non-recursive
  let bindings into case bindings.)
homepage:            http://thoughtpolice.github.com/strict-ghc-plugin
bug-reports:         http://github.com/thoughtpolice/strict-ghc-plugin/issues
license:             BSD3
license-file:        LICENSE.txt
copyright:           Copyright (c) the GHC authors
author:              The GHC authors
maintainer:          Austin Seipp <mad.one@gmail.com>
category:            Compiler Plugin
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.4.1

extra-source-files:
  AUTHORS.txt README.md
  tests/*.hs tests/Makefile

source-repository head
  type: git
  location: https://github.com/thoughtpolice/strict-ghc-plugin.git

library
  exposed-modules:
    Strict.Plugin
    Strict.Annotation
  other-modules:
    Strict.Pass
  build-depends:
    base < 5,
    ghc >= 7.4,
    syb

  ghc-options:        -Wall -O2 -funbox-strict-fields
                      -fwarn-tabs
  default-extensions: CPP
  default-language:   Haskell2010
